3 rows completed using bootstrap

--- a/index.html
+++ b/index.html
@@ -50,50 +50,49 @@
   <div class="container">
     <!-- Stack the columns on mobile by making one full-width and the other half-width -->
 
-    <div class="row no-gutters">
-      <div class="col-sm-3">
-        <img class="img-fluid" src="./resources/images/madewell-1.png" alt="">
+    <div class="row">
+      <div class="col-sm-3 img-container">
+        <img class="img-fluid" src="./resources/images/madewell-9.jpg" alt="">
       </div>
-      <div class="col-sm-3">
-        <img class="img-fluid" src="./resources/images/madewell-1.png" alt="">
-        <h1 style="text-align: center; font-size: 1.0rem;">Summer Hat in California</h1>
+      <div class="col-sm-3 img-container">
+        <img class="img-fluid" src="./resources/images/madewell-10.jpg" alt="">
       </div>
-      <div class="col-sm-3">
-        <img class="img-fluid" src="./resources/images/madewell-1.png" alt="">
-        <h1 style="text-align: center; font-size: 1.0rem;">Summer Hat in California. It's all about the beach weather!</h1>
+      <div class="col-sm-3 img-container">
+        <img class="img-fluid" src="./resources/images/madewell-11.jpg" alt="">
       </div>
-      <div class="col-sm-3">
-        <img class="img-fluid" src="./resources/images/madewell-1.png" alt="">
-        <h1 style="text-align: center; font-size: 1.0rem;">Summer Hat in California</h1>
+      <div class="col-sm-3 img-container">
+        <img class="img-fluid" src="./resources/images/madewell-12.jpg" alt="">
       </div>
     </div>
 
     <!-- Columns start at 50% wide on mobile and bump up to 33.3% wide on desktop -->
-    <div class="row no-gutters">
-      <div class="col-sm-4 col-md-4">
-        <img class="img-fluid" src="./resources/images/hat.jpg" alt="">
-      </div>
-      <div class="col-sm-4 col-md-4">
-        <img class="img-fluid" src="./resources/images/madewell-1.png" alt="">
+    <div class="row">
+      <div class="col-sm-3 img-container">
+        <img class="img-fluid" src="./resources/images/madewell-8.jpg" alt="">
         <h1 style="text-align: center; font-size: 1.0rem;">Summer Hat in California. It's all about the beach weather!</h1>
       </div>
-      <div class="col-sm-4 col-md-4">
-        <img class="img-fluid" src="./resources/images/hat.jpg" alt="">
+      <div class="col-sm-6 img-container ">
+        <img class="img-fluid" src="./resources/images/unnamed-2.jpg" alt="">
+      </div>
+      <div class="col-sm-3 img-container">
+        <img class="img-fluid" src="./resources/images/madewell-14.jpg" alt="">
+        <h1 style="text-align: center; font-size: 1.0rem;">Summer Hat in California. It's all about the beach weather!</h1>
       </div>
     </div>
 
     <!-- Columns are always 50% wide, on mobile and desktop -->
-    <div class="row no-gutters">
-      <div class="col-sm-4 col-md-6">
+    <div class="row align-items-center">
+      <div class="col-sm-4">
         <img class="img-fluid" src="./resources/images/Rosie-1.png" alt="">
       </div>
-      <div class="col-sm-4 col-md-6">
+      <div class="col-sm-4">
+        <h1 style="text-align: center; font-size: 1.0rem;">Summer Hat in California. It's all about the beach weather!</h1>
+      </div>
+      <div class="col-sm-4">
         <img class="img-fluid" src="./resources/images/Rosie-2.png" alt="">
       </div>
     </div>
   </div>
-
-
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
