added footer for social

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link href="https://fonts.googleapis.com/css?family=Cutive+Mono" rel="stylesheet">
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
   <!-- Own stylesheet -->
   <link rel="stylesheet" href="./resources/css/style.css">
   <title></title>
@@ -49,7 +51,6 @@
   <!-- Start of Header -->
   <div class="container">
     <!-- Stack the columns on mobile by making one full-width and the other half-width -->
-
     <div class="row">
       <div class="col-sm-3 img-container">
         <img class="img-fluid" src="./resources/images/madewell-9.jpg" alt="">
@@ -92,7 +93,24 @@
         <img class="img-fluid" src="./resources/images/Rosie-2.png" alt="">
       </div>
     </div>
+    <hr>
   </div>
+
+  <!-- Footer -->
+  <footer>
+
+    <div class="d-flex justify-content-center">
+      <div class="social-container">
+        <i class="fab fa-facebook-f fa-2x"></i>
+      </div>
+      <div class="social-container">
+        <i class="fab fa-instagram fa-2x"></i>
+      </div>
+      <div class="social-container">
+        <i class="fab fa-pinterest-p fa-2x"></i>
+      </div>
+    </div>
+  </footer>
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
